# dyslexiless-AI-typing

./: .gitignore  Crear_Acceso_Directo.bat  DyslexiLess.spec  DyslexiLess_Architecture.md  DyslexiLess_Arquitectura.md  DyslexiLess_Audit_Index.md  DyslexiLess_Audit_Report.md  DyslexiLess_Executive_Summary.md  DyslexiLess_Implementation_Plan.md  DyslexiLess_Indice_Auditoria.md  DyslexiLess_Informe_Auditoria.md  DyslexiLess_Plan_Implementacion.md  DyslexiLess_Resumen_Ejecutivo.md  Instalar_DyslexiLess.bat  LICENSE  MANIFEST.in  Makefile  README.md  README_UPDATES.md  README_USUARIOS.md  batch_processor.py  build_app.py  circuit_breaker.py  config_manager.py  config_window.py  correction_cache.json  correction_cache.py  correction_handler.py  dependency_container.py  generate_test_data.py  improved_gui.py  install.py  installer.iss  installer.nsi  interfaces.py  karabiner.json  keyboardlistener.py  live_corrector.py  logger_manager.py  main.py  (+25 more)
config/: __init__.py  notifications.json  telemetry.json
docs/: generate_docs.py
docs/examples/: advanced_usage.py  basic_usage.py  monitoring_security.py
docs/templates/: api.html.j2  api.md.j2
